# Multi-Model-Benchmarking

./: .env.example  .gitignore  LICENSE  MANIFEST.in  Occursus-Benchmark.spec  README.md  app.py  config.py  cost_tracker.py  db.py  judge.py  launcher.py  llm_client.py  models.py  pyproject.toml  requirements.txt  role_assigner.py  task_classifier.py
config/: occursus_claude.yaml
pipelines/: __init__.py  base.py  best_of_n.py  combinations.py  debate.py  deep.py  experimental.py  hierarchy.py  merge.py  research.py  routing.py  single.py
static/: app.js  index.html  style.css
tasks/: core_tasks.json  smoke_tasks.json  stress_tasks.json  tasks.json  thesis_tasks.json
tests/: test_api_rerun_and_history.py  test_gemini_resilience.py  test_metrics.py  test_pipeline_fallbacks.py  test_role_assigner.py  test_task_suites.py  test_validation.py
