[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "occursus-benchmark"
version = "2.0.0"
description = "Multi-Model LLM Benchmark — test whether multi-LLM synthesis pipelines beat single-model baselines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Richard Simmons"},
]
keywords = ["llm", "benchmark", "multi-model", "ai", "multi-agent", "synthesis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "ollama>=0.4",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/rich1398/Multi-Model-Benchmarking"
Repository = "https://github.com/rich1398/Multi-Model-Benchmarking"
Issues = "https://github.com/rich1398/Multi-Model-Benchmarking/issues"
